--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body{
 
   margin: 0px;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
@@ -56,4 +60,16 @@ button:focus{
 button:hover{
   border: solid 2px black;
   color: black;
+}
+
+#todoContainer{
+  width: 80%;
+  height: 80%;
+  background: blue;
+}
+
+footer{
+  width: 100%;
+  height: 5%;
+  background: gray;
 }
