--- a/index.css
+++ b/index.css
@@ -65,11 +65,20 @@ button:hover{
 #todoContainer{
   width: 80%;
   height: 80%;
-  background: blue;
+
+  padding-top: 20px;
 }
 
 .todoItem{
-  background: orange;
+  width: 100%;
+
+  border: solid 2px;
+  border-radius: 5px;
+}
+
+.todoItem h2{
+  font-size: 1.5em;
+  padding-left: 20px;
 }
 
 footer{
