--- a/index.css
+++ b/index.css
@@ -65,8 +65,6 @@ button:hover{
 #todoContainer{
   width: 80%;
   height: 80%;
-
-  padding-top: 20px;
 }
 
 .todoItem{
@@ -74,6 +72,8 @@ button:hover{
 
   border: solid 2px;
   border-radius: 5px;
+
+  margin-top: 20px;
 }
 
 .todoItem h2{
