--- a/index.css
+++ b/index.css
@@ -50,6 +50,7 @@ button{
   margin-right: 20px;
   border-radius: 5px;
   padding: 10px;
+  transition-duration: 0.3s;
 }
 
 button:focus{
@@ -60,6 +61,7 @@ button:focus{
 button:hover{
   border: solid 2px black;
   color: black;
+  transition-duration: 0.3s;
 }
 
 #todoContainer{
