--- a/index.css
+++ b/index.css
@@ -63,6 +63,11 @@ button:focus{
   outline: none;
 }
 
+#deleteNotes:focus{
+  border: solid 2px #ED4337;
+  color: #ED4337;
+}
+
 #todoContainer{
   width: 80%;
   height: 80%;
