--- a/index.css
+++ b/index.css
@@ -91,4 +91,13 @@ footer{
   width: 100%;
   height: 5%;
   background: gray;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+p{
+  color: white;
 }
