added heading link

--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@ button:focus{
 #todoContainer{
   width: 80%;
   height: 80%;
+
 }
 
 .todoItem{
@@ -100,4 +101,15 @@ footer{
 
 p{
   color: white;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+a:hover{
+  text-decoration: none;
+}
+a:visited{
+  text-decoration: none;
 }
