--- a/index.css
+++ b/index.css
@@ -81,6 +81,11 @@ button:focus{
   border-radius: 5px;
 
   margin-top: 20px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .todoItem h2{
@@ -112,4 +117,19 @@ a:hover{
 }
 a:visited{
   text-decoration: none;
+}
+
+.itemButton{
+
+  width: 50px;
+  height: 50px;
+  border: solid 2px black;
+  border-radius: 50%;
+}
+.itemButton:hover{
+  border: solid 2px red;
+  color: red;
+}
+.deleteButtonText:hover{
+  color: inherit;
 }
