--- a/index.css
+++ b/index.css
@@ -123,13 +123,12 @@ a:visited{
 
   width: 50px;
   height: 50px;
+
   border: solid 2px black;
   border-radius: 50%;
+  color: black;
 }
 .itemButton:hover{
-  border: solid 2px red;
-  color: red;
-}
-.deleteButtonText:hover{
-  color: inherit;
+  border: solid 2px #ED4337;
+  color: #ED4337;
 }
